# regis-cli

./: .dockerignore  .gitignore  .gitlab-ci.yml  .release-please-manifest.json  .releaser-pleaser.json  404.html  CHANGELOG.md  CLAUDE.md  Dockerfile  NOTES.md  Pipfile  README.md  action.yml  antora-playbook.yml  debug_rendering.py  index.html  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  release-please-config.json  report.html  report.json  score.html  search-index.json  sitemap.xml  test_engine_widgets.py  test_jinja.py  test_jsonlogic.py  test_output.txt
.agent/rules/: cicd.md  commitmessages.md  craftmanship.md  devcontainers.md  diagrams.md  documentation.md  git-workflow.md  htmlcss.md  python.md
.claude/: launch.json  settings.json
.claude/plans/: hashed-singing-lemur.md
.github/: dependabot.yml
.github/agents/: github-actions-expert.agent.md  markdown-accessibility-assistant.agent.md  qa-subagent.agent.md
.github/instructions/: markdown-accessibility.instructions.md  security-and-owasp.instructions.md
.github/milestones/: phase-3-advanced.json
.github/pages-root/: index.html
.github/workflows/: auto-merge-prs.yml  auto-rebase-prs.yml  cd-dashboard.yml  cd-docker.yml  cd-docs.yml  cd-viewer.yml  ci-action-dogfood.yml  ci-lint.yml  ci-security.yml  ci-test.yml  claude-code-review.yml  claude.yml  docker-publish.yml  docs-publish.yml  lint.yml  release-please.yml  release-snapshot.yml  releaser-pleaser.yml  repo-automerge.yml  repo-autorebase.yml  repo-dependabot-critical-vulns.yml  sync-archive-template.yml  test.yml  trunk.yml  viewer-publish.yml
.omc/: project-memory.json
.omc/sessions/: 043bf4ed-a57d-4454-afa6-970ac2d7cd8b.json  488bb374-f644-4fa8-9156-398e6269db88.json  9bbca577-0f79-4a65-879d-aa51ba23e305.json  ca2dc490-e8e5-4cdf-959c-b44b38828402.json
.omc/state/: agent-replay-1f500463-f3bd-4e1e-a45b-21b4e891d36b.jsonl  last-tool-error.json  subagent-tracking.json
.serena/memories/: project_overview.md  suggested_commands.md
.trunk/: trunk.yaml
.trunk/configs/: .markdownlint.yaml
apps/report-viewer/: .regis-sync.json  docusaurus.config.ts  package.json  tsconfig.json
assets/css/: styles.db01fe51.css
assets/js/: 0237c5db.d4ceb1f3.js  0561c700.7e9c34ce.js  069525b6.161a1917.js  07761920.4824ba04.js  0b2c7cde.290857da.js  0dc9652f.ca0fee4d.js  10abc156.d5212ed5.js  10c82360.18393a80.js  10e924e4.32173e83.js  117cb0f1.1d5c6dbc.js  12971ef0.b81ed60d.js  12b1784f.b10811e9.js  1303.59fa2f5b.js  13de52da.d3fae4e8.js  13f33968.7eacb57c.js  1466.a0f8d869.js  14eb3368.e42e13fa.js  1519.a1845f3b.js  15f02277.842cd2bc.js  1603e4e1.1c5b4ccc.js  16e0aa94.ee7003a4.js  16f4ada1.e1f102b4.js  16fc16f0.4e1ca5c0.js  17896441.6d76003f.js  192281c1.85a54943.js  1994.70f0af50.js  1a4c214a.55ad5195.js  1a4e3797.4cc6a4d0.js  1bb47b90.e157fd47.js  1d200f72.f894ed79.js  1d9d51c0.9cb1922f.js  1dc61d67.a933e500.js  1eb2e409.20b55be2.js  1f1cac7a.c6f552d0.js  2042.174f8d4c.js  2055.005720c2.js  211b189e.11b6e522.js  2124.e366cb8a.js  21ba63d3.a24501f1.js  2236.9b5b2a21.js  (+233 more)
category/analyzers/: index.html
category/cicd-integration/: index.html
category/concepts/: index.html
category/examples/: index.html
category/playbooks/: index.html
category/reference/: index.html
category/schemas/: index.html
category/usage/: index.html
concepts/analyzers/: index.html
concepts/introduction/: index.html
concepts/playbooks/: index.html
concepts/reports/: index.html
concepts/rules/: index.html
concepts/scoring/: index.html
cookiecutter/: cookiecutter.json
cookiecutter/github/: cookiecutter.json
cookiecutter/gitlab/: cookiecutter.json
cookiecutter/hooks/: post_gen_project.py
cookiecutter/{{cookiecutter.project_slug}}/: README.md
cookiecutters/consumer/: cookiecutter.json
cookiecutters/playbook/: cookiecutter.json
cookiecutters/repository/: cookiecutter.json
docs/: 404.html  antora.yml  index.html  search-index.json  sitemap.xml
docs/memory-bank/: RULES.md  activeContext.md  businessLogic.md  contextCoverage.md  dataModel.md  decisionLog.md  dependencies.md  events.md  externalIntegrations.md  featureToggles.md  observability.md  productContext.md  progress.md  projectbrief.md  roadmap.md  security.md  systemPatterns.md  techContext.md  technicalDebt.md
docs/next/: index.html  search-index.json
docs/roadmap/: index.html
docs/schemas/: archives.schema.json
docs/search/: index.html
docs/tags/: index.html
docs/v0.19.0/: index.html  search-index.json
docs/v0.21.0/: index.html  search-index.json
docs/v0.22.0/: index.html  search-index.json
docs/v0.23.4/: index.html  search-index.json
docs/v0.23.6/: index.html  search-index.json
docs/v0.24.0/: index.html  search-index.json
docs/v0.25.1/: index.html  (+1 more)
examples/: all-reports.yaml  maturity.yaml  sections.yaml  security.yaml
next/: index.html  search-index.json
regis/: cli.py  gitlab_cli.py
regis_cli/: __init__.py  cli.py  github_cli.py  gitlab_cli.py
scripts/: enforce_pip_audit_severity.py  generate_example_reports.py  generate_examples.sh  generate_whats_new.py  update_example_links.sh  verify_s01.py  verify_s02.py
search/: index.html
tags/: index.html
tests/: __init__.py  test_analyze_rerun.py  test_analyzer_dockle.py  test_analyzer_freshness.py  test_analyzer_hadolint.py  test_analyzer_metadata.py  test_analyzer_popularity.py  test_analyzer_provenance.py  test_analyzer_scorecard.py  test_analyzer_size.py  test_analyzer_skopeo.py  test_analyzer_trivy.py  test_analyzers.py  test_archive_command.py  test_archive_configure.py  test_archive_store.py  test_auth.py  test_bootstrap.py  test_cli.py  test_cli_rules_list.py  test_coverage_analyzers.py  test_coverage_cli.py  test_coverage_engine.py  test_coverage_html.py  test_dashboard.py  test_deps.py  test_docusaurus.py  test_endoflife.py  test_freshness.py  test_generate.py  test_gh_env.py  test_github_cli.py  test_gitlab_cli.py  test_hadolint.py  test_license.py  test_namedlist.py  test_parser.py  test_playbook_engine.py  test_playbook_loader.py  test_popularity.py  (+20 more)
(+11313 files in other folders)
