[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "regis-cli"
version = "v0.2.0"
description = "CLI tool to analyze Docker image registries and produce JSON reports"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "TTC" }]
dependencies = [
  "click>=8.1",
  "requests>=2.31",
  "jsonschema>=4.20",
  "semver>=3.0",
  "json-logic-qubit>=0.9",
  "pyyaml>=6.0",
  "jinja2>=3.1",
]

[project.scripts]
regis-cli = "regis_cli.cli:main"

[project.entry-points."regis_cli.analyzers"]
versioning = "regis_cli.analyzers.versioning:VersioningAnalyzer"
scorecarddev = "regis_cli.analyzers.scorecarddev:ScorecardDevAnalyzer"
skopeo = "regis_cli.analyzers.skopeo:SkopeoAnalyzer"
trivy = "regis_cli.analyzers.trivy:TrivyAnalyzer"
endoflife = "regis_cli.analyzers.endoflife:EndOfLifeAnalyzer"
popularity = "regis_cli.analyzers.popularity:PopularityAnalyzer"
size = "regis_cli.analyzers.size:SizeAnalyzer"
freshness = "regis_cli.analyzers.freshness:FreshnessAnalyzer"
provenance = "regis_cli.analyzers.provenance:ProvenanceAnalyzer"
sbom = "regis_cli.analyzers.sbom:SbomAnalyzer"
hadolint = "regis_cli.analyzers.hadolint:HadolintAnalyzer"

[project.optional-dependencies]
dev = ["pytest>=7.4", "pytest-cov>=4.1", "responses>=0.24"]

[tool.setuptools.packages.find]
include = ["regis_cli*"]

[tool.setuptools.package-data]
regis_cli = ["schemas/*.json", "scorecard/*.yaml", "templates/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
