[build-system]
requires = ["setuptools>=80", "setuptools-scm[simple]>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "regis-cli"
version = "0.23.0"
description = "Container Security & Policy-as-Code Orchestration. Unified analysis, custom playbooks, and highly customizable interactive reports for production-ready CI/CD."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "TTC" }]
dependencies = [
  "click>=8.1",
  "requests>=2.32.2",
  "jsonschema>=4.20",
  "semver>=3.0",
  "json-logic-qubit>=0.9",
  "pyyaml>=6.0",
  "jinja2>=3.1",
  "cookiecutter>=2.5",
  "referencing<0.37.0",
  "python-gitlab>=4.4.0",
]

[project.scripts]
regis-cli = "regis_cli.cli:main"

[project.entry-points."regis_cli.analyzers"]
versioning = "regis_cli.analyzers.versioning:VersioningAnalyzer"
scorecarddev = "regis_cli.analyzers.scorecarddev:ScorecardDevAnalyzer"
skopeo = "regis_cli.analyzers.skopeo:SkopeoAnalyzer"
trivy = "regis_cli.analyzers.trivy:TrivyAnalyzer"
endoflife = "regis_cli.analyzers.endoflife:EndOfLifeAnalyzer"
popularity = "regis_cli.analyzers.popularity:PopularityAnalyzer"
size = "regis_cli.analyzers.size:SizeAnalyzer"
freshness = "regis_cli.analyzers.freshness:FreshnessAnalyzer"
provenance = "regis_cli.analyzers.provenance:ProvenanceAnalyzer"
sbom = "regis_cli.analyzers.sbom:SbomAnalyzer"
hadolint = "regis_cli.analyzers.hadolint:HadolintAnalyzer"
dockle = "regis_cli.analyzers.dockle:DockleAnalyzer"

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "pytest-cov>=4.1",
  "responses>=0.24",
  "genbadge[coverage]>=1.1",
]

[tool.setuptools.packages.find]
include = ["regis_cli*"]

[tool.setuptools.package-data]
regis_cli = [
  "schemas/**/*",
  "scorecard/*.yaml",
  "templates/**/*",
  "cookiecutters/**/*",
  "viewer_assets/**/*",
]

[tool.setuptools_scm]
# Enable setuptools_scm, though version is manually set to 0.20.0 for now.
# This avoids build-time errors when setuptools_scm is in build-system requirements.

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=regis_cli --cov-report=term-missing --cov-report=html --cov-report=xml --cov-fail-under=90"

[tool.coverage.run]
source = ["regis_cli"]
omit = ["regis_cli/cookiecutters/*", "regis_cli/viewer_assets/*"]

[tool.coverage.report]
fail_under = 90
show_missing = true
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
  "raise NotImplementedError",
  "@(abc\\.)?abstractmethod",
]

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["yaml.*", "requests.*", "json_logic.*", "referencing.*"]
ignore_missing_imports = true
