[build-system]
requires = ["setuptools>=80", "setuptools-scm[simple]>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "regis"
version = "0.25.2"
description = "Container Security & Policy-as-Code Orchestration. Unified analysis, custom playbooks, and highly customizable interactive reports for production-ready CI/CD."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "TTC" }]
dependencies = [
  "click>=8.1",
  "requests>=2.32.2",
  "jsonschema>=4.20",
  "semver>=3.0",
  "json-logic-qubit>=0.9",
  "pyyaml>=6.0",
  "jinja2>=3.1",
  "cookiecutter>=2.5",
  "referencing<0.37.0",
  "python-gitlab>=4.4.0",
]

[project.scripts]
regis = "regis.cli:main"

[project.entry-points."regis.analyzers"]
versioning = "regis.analyzers.versioning:VersioningAnalyzer"
scorecarddev = "regis.analyzers.scorecarddev:ScorecardDevAnalyzer"
skopeo = "regis.analyzers.skopeo:SkopeoAnalyzer"
trivy = "regis.analyzers.trivy:TrivyAnalyzer"
endoflife = "regis.analyzers.endoflife:EndOfLifeAnalyzer"
popularity = "regis.analyzers.popularity:PopularityAnalyzer"
size = "regis.analyzers.size:SizeAnalyzer"
freshness = "regis.analyzers.freshness:FreshnessAnalyzer"
provenance = "regis.analyzers.provenance:ProvenanceAnalyzer"
sbom = "regis.analyzers.sbom:SbomAnalyzer"
hadolint = "regis.analyzers.hadolint:HadolintAnalyzer"
dockle = "regis.analyzers.dockle:DockleAnalyzer"

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "pytest-cov>=4.1",
  "responses>=0.24",
  "genbadge[coverage]>=1.1",
]

[tool.setuptools.packages.find]
include = ["regis*"]

[tool.setuptools.package-data]
regis = [
  "schemas/**/*",
  "scorecard/*.yaml",
  "templates/**/*",
  "cookiecutters/**/*",
  "viewer_assets/**/*",
]

[tool.setuptools_scm]
# Enable setuptools_scm, though version is manually set to 0.20.0 for now.
# This avoids build-time errors when setuptools_scm is in build-system requirements.

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=regis --cov-report=term-missing --cov-report=html --cov-report=xml --cov-fail-under=90"

[tool.coverage.run]
source = ["regis"]
omit = ["regis/cookiecutters/*", "regis/viewer_assets/*"]

[tool.coverage.report]
fail_under = 90
show_missing = true
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
  "raise NotImplementedError",
  "@(abc\\.)?abstractmethod",
]

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["yaml.*", "requests.*", "json_logic.*", "referencing.*"]
ignore_missing_imports = true
